--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
+}
+body{
+  font-family: 'Lexend Deca', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.columns{
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  width: 65%;
+  margin: 4rem auto;
+  height: 600px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+@media (max-width:750px){
+  .columns{
+    display: grid;
+    grid-template-columns: 1fr ;
+    margin-bottom:4rem;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.grid1{
+  background-color: hsl(31, 77%, 52%);
+  padding: 3rem 2.5rem;
+  font-size: 1em ;
+  font-weight: 400;
+  display: grid;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.grid1-button{
+  background-color: hsl(31, 77%, 52%);
+  font-size: 1rem;
+  padding: .5em 1em;
+  border-radius:1em;
+  border: .5px solid white;
+  cursor: pointer;
+  color: white;
+}
+.grid1-button:hover{
+  background-color: white;
+  color:hsl(31, 77%, 52%);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.grid2{
+  background-color:  hsl(184, 100%, 22%);
+  padding: 3rem 2.5rem;
+  font-size: 1em ;
+  font-weight: 400;
+  display: grid;
+  color: white;
+}
+.grid2-button{
+  background-color:  hsl(184, 100%, 22%);
+  font-size: 1rem;
+  padding: .5em 1em;
+  border-radius:1em;
+  border: .5px solid white;
+  cursor: pointer;
+  color: white;
+}
+.grid2-button:hover{
+  background-color: white;
+  color:hsl(184, 100%, 22%);
+}
+.grid3{
+  background-color: hsl(179, 100%, 13%);
+  padding: 3rem 2.5rem;
+  font-size: 1em ;
+  font-weight: 400;
+  display: grid;
+  color: white;
+}
+.grid3-button{
+  background-color:  hsl(179, 100%, 13%);
+  font-size: 1rem;
+  padding: .5em 1em;
+  border-radius:1em;
+  border: .5px solid white;
+  cursor: pointer;
+  color: white;
+}
+.grid3-button:hover{
+  background-color: white;
+  color:hsl(179, 100%, 13%);
 }
